image folder uploaded

--- a/portfolio.css
+++ b/portfolio.css
@@ -216,3 +216,12 @@ body{
     height: 1px;
     background-color: rgba(255, 255, 255, 0.5);
 }
+.center-img img{
+    position: relative;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 97.5%;
+    height: 630px;
+    border-radius: 15px;
+}
