--- a/portfolio.css
+++ b/portfolio.css
@@ -217,13 +217,13 @@ body{
     background-color: rgba(255, 255, 255, 0.5);
 }
 .center-img{
-    background: url(images/IDEA\ MEETS\ CREATIVITY.jpg);
+    background: url(images/IDEA\ MEETS\ CREATIVITY\ \(1\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 30px;
     width: 100%;
-    height: 400px;
+    height: 700px;
 }
 .center-icon{
     display: flex;
@@ -233,7 +233,7 @@ body{
     left: 24cm;
     background-color: #ffffff;
     border-radius: 20px;
-    width: 173px;
+    width: 127px;
     height: 40px;
     padding: 10px 20px;
 
@@ -395,4 +395,7 @@ a.search, a.prototype, a.design{
     line-height: 1.4;
     margin-right: 9px;
     initial-letter-align: inherit;
+}
+.clients-post{
+
 }
