--- a/portfolio.css
+++ b/portfolio.css
@@ -434,9 +434,64 @@ a.search, a.prototype, a.design{
 form{
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    position: relative;
-    top: 130px;
+    justify-content: center;
+    gap: 8px;
+    width: 420px;
+    height: 450px;
+    margin-top: 130px;
     margin-left: 30px;
-    width: 400px;
+    background-color: #00357abb;
+    padding: 25px 35px;
+    border-radius: 15px;
+
+}
+form label{
+   color: white;
+    font-family: "Norwester", Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 200;
+    line-height: 1.5;
+    padding-top: 20px;
+}
+form input, form textarea{
+    background-color: #ffffffd0;
+    padding: 7px;
+    border-radius: 5px;
+    border: none;
+    font-size: 14px;
+    font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
+}
+form input:focus {
+    outline: none;
+    border-color: #888;
+    font-size: 12px;
+}
+form ::placeholder{
+    font-size: 12px;
+}
+form button{
+    margin-top: 20px;
+    margin-left: 210px;
+    width: 140px;
+    height: 35px;
+    background-color: #030f40;
+    border: none;
+    border-radius: 5px;
+    font-family: Norwester, Arial,sans-serif;
+    color: white;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+footer{
+    font-size: 14px;
+    background-color: #030f40;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-family: poppins, sans-serif;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 20px;
 }
